--- a/style.css
+++ b/style.css
@@ -82,55 +82,65 @@ body {
   display: none;
 }
 /* desktop 1440px */
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   body {
     display: flex;
     justify-content: center;
-    padding: 0;
+    align-items: center;
+    padding: 175px 160px;
+    margin: 0;
+    min-height: calc(100vh - 350px);
   }
   .card {
-    max-width: 1110px;
-    margin: 170px 0;
+    height: 445px;
+    width: 1110px;
+    max-width: initial;
     display: flex;
     align-items: center;
+    margin: 0;
   }
   /* content */
   .content {
-    padding-left: 90px;
+    padding: 73px 120px 62px 65px;
+    flex: 1;
   }
   /* stat */
   .stat {
     display: flex;
     justify-content: left;
+    margin: 75px 0 0;
+  }
+  .stat1 {
+    margin: 0 65px 0 0;
+    text-align: left;
   }
   .main-heading {
     text-align: left;
-    padding-right: 150px;
+    font-size: 35px;
+    line-height: 1.29;
+    letter-spacing: 0.2;
   }
   .main-paragraph {
     text-align: left;
-    margin: 25px 0 70px;
-    padding-right: 70px;
+    line-height: 1.6;
+    letter-spacing: 0.2;
+    margin: 25px 0 0;
   }
-  .stat1 {
-    margin-right: 60px;
-    text-align: left;
+  .stat-paragraph {
+    margin-top: 10px;
   }
 
   /* background heading */
-  .background-heading {
-    display: none;
-  }
-  .background-heading {
+  .cover {
     order: 2;
-    width: 100%;
-    height: 100%;
-    background-size: 100% 100%;
+    width: 540px;
+    height: 445px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
+    border-top-left-radius: 0;
+  }
+  .background-heading {
+    height: 445px;
     background-image: url(/images/image-header-desktop.jpg);
-    background-blend-mode: soft-light;
-    background-color: hsl(277, 64%, 61%);
-    display: flex;
   }
 }
