--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   width: 100%;
   height: 240px;
   background-size: cover;
-  background-image: url(/images/image-header-mobile.jpg);
+  background-image: url(./images/image-header-mobile.jpg);
 }
 .alpha {
   position: absolute;
@@ -141,6 +141,6 @@ body {
   }
   .background-heading {
     height: 445px;
-    background-image: url(/images/image-header-desktop.jpg);
+    background-image: url(./images/image-header-desktop.jpg);
   }
 }
